--- a/Hospital.Servise/Hospital.Servise.csproj
+++ b/Hospital.Servise/Hospital.Servise.csproj
@@ -1,14 +1,19 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.2" />
     <PackageReference Include="Moq" Version="4.18.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Hospital.Models\Hospital.Models.csproj" />
+    <ProjectReference Include="..\Hospital.Repositories\Hospital.Repositories.csproj" />
   </ItemGroup>
 
 </Project>
